--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/import.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/custom.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  
   <title>React Stack</title>
 </head>
 
